[gd_scene load_steps=2 format=3 uid="uid://di1cxchv8e3fn"]

[ext_resource type="Script" path="res://Scenes/mainMenu/fase_menu.gd" id="1_ljxup"]

[node name="FaseMenu" type="Control" node_paths=PackedStringArray("buttons")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljxup")
buttons = [NodePath("VBoxContainer/fase1"), NodePath("VBoxContainer/fase2"), NodePath("VBoxContainer/fase3"), NodePath("VBoxContainer/fase4")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -165.0
offset_right = 46.5
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(46.5, 169)
theme_override_constants/separation = 20

[node name="fase1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "fase1"

[node name="fase2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "fase2"

[node name="fase3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "fase3"

[node name="fase4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "fase4"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "voltar"

[connection signal="pressed" from="VBoxContainer/fase1" to="." method="_on_fase_1_pressed"]
[connection signal="pressed" from="VBoxContainer/fase2" to="." method="_on_fase_2_pressed"]
[connection signal="pressed" from="VBoxContainer/fase3" to="." method="_on_fase_3_pressed"]
[connection signal="pressed" from="VBoxContainer/fase4" to="." method="_on_fase_4_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
